[package]
name = "newton"
version = "0.1.0"
authors = ["Ricardo Delfin <me@rdelfin.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amethyst = { version = "0.15", features = ["vulkan", "no-slow-safety-checks"] }
anyhow = "1.0"
log = "0.4"
nalgebra = "0.19"
serde = "1.0"
specs-derive = "0.4"
tuple-map = "0.4"
